--- a/public/style.css
+++ b/public/style.css
@@ -23,6 +23,7 @@ h4{
     -webkit-background-size: cover;
     background-size: cover;
     color:rgb(178, 250, 144);
+    cursor: pointer;
  }
 
  .dark-row{
@@ -43,12 +44,12 @@ h4{
 #articles {
   display: inline-block;
   overflow: auto;
-  width: 60%;
+  width: 100%;
   height: 700px;
 }
 #notes {
   float: right;
-  width: 30%;
+  width: 80%;
 }
 textarea, input {
   display: block;
